--- a/zhili-dataservice/zhili-dataservice-api/pom.xml
+++ b/zhili-dataservice/zhili-dataservice-api/pom.xml
@@ -9,6 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>com.niezhili</groupId>
     <artifactId>zhili-dataservice-api</artifactId>
 
     <name>zhili-dataservice-api</name>
