--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
   <url>http://www.example.com</url>
 
   <properties>
+    <revision>1.0-SNAPSHOT</revision>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
