--- a/zhili-adhoc/zhili-adhoc-executor/pom.xml
+++ b/zhili-adhoc/zhili-adhoc-executor/pom.xml
@@ -3,22 +3,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>zhili-dataplatform</artifactId>
+    <artifactId>zhili-adhoc</artifactId>
     <groupId>com.niezhili</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.niezhili</groupId>
-  <artifactId>zhili-adhoc</artifactId>
-  <packaging>pom</packaging>
+  <artifactId>zhili-adhoc-executor</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <modules>
-    <module>zhili-adhoc-dao</module>
-    <module>zhili-adhoc-executor</module>
-  </modules>
 
-  <name>zhili-adhoc</name>
+  <name>zhili-adhoc-executor</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
