feat:完善元数据管理相关模块

--- a/zhili-metadata/zhili-metadata-admin/pom.xml
+++ b/zhili-metadata/zhili-metadata-admin/pom.xml
@@ -2,25 +2,13 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <parent>
-    <artifactId>zhili-dataplatform</artifactId>
-    <groupId>com.niezhili</groupId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.niezhili</groupId>
-  <artifactId>zhili-metadata</artifactId>
-  <packaging>pom</packaging>
+  <artifactId>zhili-metadata-admin</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <modules>
-    <module>zhili-metadata-datasource</module>
-      <module>zhili-metadata-collect</module>
-    <module>zhili-metadata-admin</module>
-      <module>zhili-metadata-dao</module>
-  </modules>
 
-  <name>zhili-metadata</name>
+  <name>zhili-metadata-admin</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
