--- a/zhili-dataservice/zhili-dataservice-dao/pom.xml
+++ b/zhili-dataservice/zhili-dataservice-dao/pom.xml
@@ -24,6 +24,15 @@
   </properties>
 
   <dependencies>
+
+    <!-- zhili-dataplatform -->
+
+    <dependency>
+      <groupId>com.niezhili</groupId>
+      <artifactId>zhili-common</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
