--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <module>zhili-ui</module>
     <module>zhili-report</module>
     <module>zhili-scheduler</module>
+    <module>zhili-monitor</module>
   </modules>
 
   <name>zhili-dataplatform</name>
@@ -64,6 +65,7 @@
     <swagger.version>1.9.3</swagger.version>
     <springfox.version>2.9.2</springfox.version>
     <swagger-models.version>1.5.24</swagger-models.version>
+    <spring-data-influxdb.version>1.8</spring-data-influxdb.version>
   </properties>
 
   <dependencyManagement>
