--- a/zhili-metadata/zhili-metadata-datasource/pom.xml
+++ b/zhili-metadata/zhili-metadata-datasource/pom.xml
@@ -25,6 +25,12 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>com.niezhili</groupId>
+      <artifactId>zhili-metadata-dao</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 
   <build>
