feat:Spring Cloud Gateway必须依赖配置中心

--- a/zhili-gateway/pom.xml
+++ b/zhili-gateway/pom.xml
@@ -38,10 +38,10 @@
     </dependency>
 
     <!-- SpringCloud Alibaba Nacos -->
-<!--    <dependency>-->
-<!--      <groupId>com.alibaba.cloud</groupId>-->
-<!--      <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>-->
-<!--    </dependency>-->
+    <dependency>
+      <groupId>com.alibaba.cloud</groupId>
+      <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+    </dependency>
 
     <!-- SpringCloud Alibaba Nacos Config -->
 <!--    <dependency>-->
